# kohyli

./: LICENSE  README.md
.github/workflows/: api-endpoint-test.yml  pytest.yml
backend/: .gitignore  README.md  justfile  main.py  pyproject.toml  schemas.py
backend/app/: config.py  database.py  examples.py  main.py  schemas.py  utils.py
backend/app/api/: router.py
backend/app/api/routers/: authors.py  books.py  orders.py  users.py
backend/app/api/schemas/: books_authors.py  orders.py  users.py
backend/app/core/: security.py
backend/app/database/: models.py  redis.py  session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 23866d8a07fa_update_authors_book_relationship.py  9d5acefa5ad0_init.py
backend/app/services/: authors.py  books.py  orders.py  users.py
backend/app/tests/: test_authors_service.py  test_books_service.py  test_orders_service.py  test_users_service.py
backend/script/: api.hurl
backend/scripts/: insert_books.sql
frontend/: README.md  justfile  package-lock.json  package.json
frontend/src/: App.tsx  Client.ts
frontend/src/components/: About.tsx  Bestsellers.tsx  BookCard.tsx  BookPage.tsx  Careers.tsx  Cart.tsx  ContactUs.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Home.tsx  Login.tsx  NewArrivals.tsx  OrderDetails.tsx  OurStory.tsx  SeashellLogo.tsx  Signup.tsx  StarRating.tsx  ThankYou.tsx  UserPage.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  (+1 more)
frontend/src/context/: ApiContext.tsx  AuthContext.tsx  CartContext.tsx
frontend/src/data/: mockBooks.ts
frontend/src/types/: index.ts
